--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "mongoose": "^7.6.3",
+    "mongoose-slug-updater": "^3.3.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
+    "mongoose-slug-generator": "^1.0.4",
     "node-sass": "^9.0.0"
   }
 }
